--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Stimuli frontend test",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "next -p 3005",
     "build": "next build",
     "start": "next start"
@@ -22,10 +22,16 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.26.3",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
     "@types/node": "^13.13.28",
     "@types/react": "^16.9.53",
     "@types/styled-components": "^5.1.4",
+    "babel-jest": "^26.6.1",
     "babel-plugin-styled-components": "^1.11.1",
+    "jest": "^26.6.1",
+    "jest-dom": "^4.0.0",
     "tailwindcss": "^1.9.6",
     "typescript": "^3.9.7"
   }
