partial dashboard design implementation

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.9.4",
     "next": "^9.5.5",
     "react": "^16.14.0",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.14.0",
     "styled-components": "^5.2.0"
   },
